@@ -19,6 +19,7 @@
 #include "ParkImporter.h"
 #include "PlatformEnvironment.h"
 #include "ReplayManager.h"
+#include "actions/GameSetSpeedAction.h"
 #include "actions/LoadOrQuitAction.h"
 #include "audio/audio.h"
 #include "config/Config.h"
@@ -97,24 +98,28 @@ using namespace OpenRCT2;
 
 void GameResetSpeed()
 {
-    gGameSpeed = 1;
-    WindowInvalidateByClass(WindowClass::TopToolbar);
+    auto setSpeedAction = GameSetSpeedAction(1);
+    GameActions::Execute(&setSpeedAction);
 }
 
 void GameIncreaseGameSpeed()
 {
-    gGameSpeed = std::min(gConfigGeneral.DebuggingTools ? 5 : 4, gGameSpeed + 1);
-    if (gGameSpeed == 5)
-        gGameSpeed = 8;
-    WindowInvalidateByClass(WindowClass::TopToolbar);
+    auto newSpeed = std::min(gConfigGeneral.DebuggingTools ? 5 : 4, gGameSpeed + 1);
+    if (newSpeed == 5)
+        newSpeed = 8;
+
+    auto setSpeedAction = GameSetSpeedAction(newSpeed);
+    GameActions::Execute(&setSpeedAction);
 }
 
 void GameReduceGameSpeed()
 {
-    gGameSpeed = std::max(1, gGameSpeed - 1);
-    if (gGameSpeed == 7)
-        gGameSpeed = 4;
-    WindowInvalidateByClass(WindowClass::TopToolbar);
+    auto newSpeed = std::max(1, gGameSpeed - 1);
+    if (newSpeed == 7)
+        newSpeed = 4;
+
+    auto setSpeedAction = GameSetSpeedAction(newSpeed);
+    GameActions::Execute(&setSpeedAction);
 }
 
 /**
@@ -777,7 +782,7 @@ void GameLoadOrQuitNoSavePrompt()
             {
                 InputSetFlag(INPUT_FLAG_5, false);
             }
-            gGameSpeed = 1;
+            GameResetSpeed();
             gFirstTimeSaving = true;
             GameNotifyMapChange();
             GameUnloadScripts();
