@@ -93,6 +93,7 @@
     <ClInclude Include="actions\FootpathAdditionRemoveAction.h" />
     <ClInclude Include="actions\GameAction.h" />
     <ClInclude Include="actions\GameActionResult.h" />
+    <ClInclude Include="actions\GameSetSpeedAction.h" />
     <ClInclude Include="actions\GuestSetFlagsAction.h" />
     <ClInclude Include="actions\GuestSetNameAction.h" />
     <ClInclude Include="actions\LandBuyRightsAction.h" />
@@ -617,6 +618,7 @@
     <ClCompile Include="actions\GameAction.cpp" />
     <ClCompile Include="actions\GameActionRegistry.cpp" />
     <ClCompile Include="actions\GameActionResult.cpp" />
+    <ClCompile Include="actions\GameSetSpeedAction.cpp" />
     <ClCompile Include="actions\GuestSetFlagsAction.cpp" />
     <ClCompile Include="actions\GuestSetNameAction.cpp" />
     <ClCompile Include="actions\LandBuyRightsAction.cpp" />
